fixed some shit

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/index.css">
   <link rel="icon" href="./img/logoPreto.png" </head> <body>
   <div id="root">
+    <div id="padding-col"></div>
     <div id="left-col">
       <div id="logo">
         <a href="#">
