--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       <div id="img-desc">
         <div>
           <p id="front-title">
-            Algália
+            lince bravo
           </p>
           <p>
-            Caneta digital sobre placa, 2018.
+            maquina de fotografar, 2018.
           </p>
         </div>
       </div>
     </div>
     <div id="right-col">
-      <img id="front-img" src="img/kandisky.webp">
+      <img id="front-img" src="img/lince.jpg">
     </div>
   </div>
   <script src="js/index.js"></script>
