--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
     </div>
     <div id="right-col">
       <img id="front-img" src="img/lince.jpg">
+      <div id="mobile-img-desc">
+        <div>
+          <p id="">
+            lince bravo
+          </p>
+          <p>
+            maquina de fotografar, 2018.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
   <script src="js/index.js"></script>
