--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div id="right-col">
-      <img id="front-img" src="img/lince.jpg">
+      <img id="front-img" src="img/licesnocarro.png">
       <div id="mobile-img-desc">
         <div>
           <p id="">
