--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="css/index.css">
-  <link rel="icon" href="./img/logoPreto.png">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-</head>
-
-<body>
+  <link rel="icon" href="./img/logoPreto.png" </head> <body>
   <div id="root">
     <div id="padding-col"></div>
     <div id="left-col">
@@ -31,25 +27,23 @@
         <a class="menu-link" href="#about">about</a>
       </div>
     </div>
-    <div id="canvas">
-      <div id="center-col">
-        <div id="img-desc">
-          <div>
-            <p id="front-title">
-              lince bravo
-            </p>
-            <p>
-              maquina de fotografar, 2018.
-            </p>
-          </div>
+    <div id="center-col">
+      <div id="img-desc">
+        <div>
+          <p id="front-title">
+            lince bravo
+          </p>
+          <p>
+            maquina de fotografar, 2018.
+          </p>
         </div>
       </div>
-      <div id="right-col">
-        <img id="front-img" src="img/lince.jpg">
-      </div>
+    </div>
+    <div id="right-col">
+      <img id="front-img" src="img/lince.jpg">
     </div>
   </div>
   <script src="js/index.js"></script>
-</body>
+  </body>
 
 </html>
