--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="Eugenio Santos">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#ffeeec">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 
   <link rel="stylesheet" href="css/index.css">
   <link rel="icon" href="./img/logoPreto.png" </head> <body>
@@ -34,14 +35,14 @@
           <p id="front-title">
             lince bravo
           </p>
-          <p>
+          <p id="front-desc">
             maquina de fotografar, 2018.
           </p>
         </div>
       </div>
     </div>
     <div id="right-col">
-      <img id="front-img" src="img/licesnocarro.png">
+      <img id="front-img" src="img/lince.jpg">
     </div>
   </div>
   <script src="js/index.js"></script>
