jekly working and gitignore

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#ffeeec">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="/index.css">
   <link rel="icon" href="./img/logoPreto.png" </head> <body>
   <div id="root">
     <div id="padding-col"></div>
@@ -44,8 +44,10 @@
     <div id="right-col">
       <img id="front-img" src="img/lince.jpg">
     </div>
+    <div id="nav-div">
+    </div>
   </div>
-  <script src="js/index.js"></script>
+  <script src="/index.js"></script>
   </body>
 
 </html>
